--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+.app {
+  /* background: #E9967A; */
+  height: 100vh;
+  padding: 30px;
+}
+
+.todo-list {
+  background: #c48169;
+  border-radius: 4px;
+  min-width: 500px;
+  padding: 15px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  border: 1px solid white;
+}
+
+.todo {
+  align-items: center;
+  background: #fff;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px rgba(36, 34, 34, 0.15);
+  display: flex;
+  font-size: 12px;
+  justify-content: space-between;
+  margin-bottom: 6px;
+  padding: 3px 10px;
+}
+h1{
+  color: #971022;
+  
+}
+
+.input{
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 2px 30px;
+  border: 1px transparent solid
+}
+.bnt{
+  background-color: rgb(253, 80, 80);
   color: white;
+  padding: 2px 15px;
+  border-radius: 8px;
+  margin-left: 10px;
+  cursor: pointer;
+  border: 1px transparent solid
+  
+
+
 }
 
-.App-link {
-  color: #61dafb;
+.btt{
+  /* background-color:	 rgb(241, 189, 189); */
+  border: 1px transparent solid;
+  border-radius: 3px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.botao{
+  /* background-color: #eb735e; */
+  margin-left: 5px;
+  border: 1px transparent solid;
+  border-radius: 3px;
 }
